--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="/content.html" aria-label="Brings you to the frontpage">
+            <a class="nav-link" href="/index.html" aria-label="Brings you to the frontpage">
               Home
             </a>
           </li>
@@ -102,7 +102,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#gallery">
+            <a class="nav-link" href="/news.html">
               News
             </a>
           </li>
@@ -115,8 +115,6 @@
               VN
             </a>
           </li>
-
-
         </ul>
       </div>
     </div>
