--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@
             <h2 class="display-6">"Expanding Horizons - Empowering Futures"</h2>
           </div>
         </div>
-        <div class="row d-flex align-items-center">
-          <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="row d-flex align-items-center value">
+          <div class="col-1 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <span class="h5 fw-lighter">01.</span>
             <h3 class="py-5 border-top border-dark"><span style="color: #ffbc2c;">S</span> - Supportive</h3>
             <p>SunEd seeks to offer personalized guidance, resources, and responsive assistance to help students achieve
               their learning goals effectively. We ensure accessibility to learning tools and create a nurturing
               environment that addresses both academic and personal needs of learners.</p>
           </div>
-          <div class="col-md-6 col-lg-4 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-2 col-md-6 col-lg-4 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
             <span class="h5 fw-lighter">02.</span>
             <h3 class="py-5 border-top border-dark"><span style="color: #ffbc2c;">U</span> - Utilitarian</h3>
             <p>Focusing on practical, outcome-oriented support maximizes educational benefits for the largest number of
@@ -164,7 +164,7 @@
               that enhance skills and employability, directly aligning education with real-world applications and
               learner success.</p>
           </div>
-          <div class="col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
             <span class="h5 fw-lighter">03.</span>
             <h3 class="py-5 border-top border-dark"><span style="color: #ffbc2c;">N</span> - Needed</h3>
             <p>SunEd seeks to offer personalized guidance, resources, and responsive assistance to help students achieve
@@ -172,8 +172,8 @@
               environment that addresses both academic and personal needs of learners.</p>
           </div>
         </div>
-        <div class="row d-flex align-items-center">
-          <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="row d-flex align-items-center value">
+          <div class="col-1 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <span class="h5 fw-lighter">04.</span>
             <h3 class="py-5 border-top border-dark"><span style="color: #3c4493;">E</span> - Efficient</h3>
             <p>Focusing on practical, outcome-oriented support maximizes educational benefits for the largest number of
@@ -181,15 +181,14 @@
               that enhance skills and employability, directly aligning education with real-world applications and
               learner success.</p>
           </div>
-          <div class="col-md-6 col-lg-4 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-2 col-md-6 col-lg-4 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
             <span class="h5 fw-lighter">05.</span>
             <h3 class="py-5 border-top border-dark"><span style="color:#3c4493;">D</span> - Diligent</h3>
             <p>SunEd seeks to offer personalized guidance, resources, and responsive assistance to help students achieve
               their learning goals effectively. We ensure accessibility to learning tools and create a nurturing
               environment that addresses both academic and personal needs of learners.</p>
           </div>
-
-          <div class="col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
             <span class="h5 fw-lighter">06.</span>
             <h3 class="py-5 border-top border-dark"><strong>Our Vision</strong></h3>
             <p>"<strong>SunEd</strong> becomes one of the leading education and training providers in Vietnam and the region to provide affordable pathways for learners to interact with the international community."</p>
@@ -327,20 +326,6 @@
             <a href="">+84 779 661 879</a><br><br>
             <a href="">info@suned.edu.vn</a>
           </address>
-          <!-- <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Lorem ipsum</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" href="#">Dolor sitam est</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" href="#">Sed odio cras</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" href="#">Commodo tortor ac</a>
-            </li>
-          </ul> -->
         </div>
         <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
           <h3 class="h6 mb-3">
